# agent-actors

./: .env.sample  LICENSE  README.md  data_map.txt  launch.md  pyproject.toml
agent_actors/: __init__.py  actors.py  agent.py  agent_actor.py  callback_manager.py  child.py  models.py  parent.py  supervisor.py  test_system.py  toolkit.py  worker.py
agent_actors/chains/: agent.py  base.py  child.py  parent.py  supervisor.py  worker.py
agent_actors/utilities/: log.py
gpt_actors/: actor.py  agent.py  models.py  supervisor.py  test_supervisor.py  test_system.py  worker.py
gpt_actors/chains/: __init__.py  adjust.py  agent.py  do.py  plan.py  supervisor.py  worker.py
ooda_gpt/: agent.py  prompts.py
ooda_gpt/chains/: Act.py  Decide.py  Metamorphose.py  Observe.py  Orient.py  Prioritize.py  adjust.py  check.py  plan.py
pdca_gpt/: __init__.py  agent.py  test_agent.py
pdca_gpt/chains/: __init__.py  adjust.py  check.py  do.py  plan.py  prioritize.py
